--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -7,9 +7,10 @@
     "dev": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web",
     "lint": "eslint .",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "update:preview": "eas update --branch preview",
+    "update:production": "eas update --branch production"
   },
   "dependencies": {
     "@gluestack-style/react": "^1.0.57",
@@ -32,12 +33,12 @@
     "expo-location": "^19.0.8",
     "expo-router": "^6.0.21",
     "expo-status-bar": "~3.0.9",
+    "expo-updates": "~29.0.16",
     "i18next": "^25.7.4",
     "intl-pluralrules": "^2.0.1",
     "lucide-react-native": "^0.562.0",
     "nativewind": "^4.2.1",
     "react": "19.1.0",
-    "react-dom": "19.1.0",
     "react-i18next": "^16.5.1",
     "react-native": "0.81.5",
     "react-native-reanimated": "~4.1.1",
