--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -28,6 +28,7 @@
     "@repo/types": "*",
     "@repo/validations": "*",
     "@socket.io/redis-adapter": "^8.3.0",
+    "@tanstack/react-query": "^5.90.16",
     "@types/cookie": "^0.6.0",
     "@vis.gl/react-google-maps": "^1.7.1",
     "better-auth": "^1.4.10",
@@ -37,6 +38,8 @@
     "date-fns-tz": "^3.2.0",
     "dotenv": "^17.2.3",
     "embla-carousel-react": "^8.6.0",
+    "i18next": "^25.7.4",
+    "i18next-browser-languagedetector": "^8.2.0",
     "ioredis": "^5.8.2",
     "jsonwebtoken": "^9.0.3",
     "lucide-react": "^0.555.0",
@@ -48,6 +51,7 @@
     "react-dom": "19.2.3",
     "react-hook-form": "^7.69.0",
     "react-hot-toast": "^2.6.0",
+    "react-i18next": "^16.5.2",
     "react-phone-number-input": "^3.4.14",
     "react-select": "^5.10.2",
     "sharp": "^0.34.5",
