--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -45,6 +45,7 @@
     "lucide-react": "^0.555.0",
     "next": "16.1.1",
     "next-devtools-mcp": "^0.3.5",
+    "next-themes": "^0.4.6",
     "react": "19.2.3",
     "react-datepicker": "^8.10.0",
     "react-day-picker": "^9.12.0",
