--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,6 +11,7 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@asteasolutions/zod-to-openapi": "^8.4.0",
     "@aws-sdk/client-s3": "^3.955.0",
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-accordion": "^1.2.12",
@@ -30,6 +31,7 @@
     "@socket.io/redis-adapter": "^8.3.0",
     "@tanstack/react-query": "^5.90.16",
     "@types/cookie": "^0.6.0",
+    "@types/swagger-ui-react": "^5.18.0",
     "@vis.gl/react-google-maps": "^1.7.1",
     "better-auth": "^1.4.10",
     "class-variance-authority": "^0.7.1",
@@ -58,6 +60,7 @@
     "sharp": "^0.34.5",
     "socket.io": "^4.8.3",
     "socket.io-client": "^4.8.3",
+    "swagger-ui-react": "^5.31.0",
     "use-debounce": "^10.0.6",
     "vaul": "^1.1.2"
   },
