--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -48,6 +48,8 @@
     "next": "16.1.1",
     "next-devtools-mcp": "^0.3.5",
     "next-themes": "^0.4.6",
+    "otplib": "^13.1.1",
+    "qrcode": "^1.5.4",
     "react": "19.2.3",
     "react-datepicker": "^8.10.0",
     "react-day-picker": "^9.12.0",
@@ -70,6 +72,7 @@
     "@tailwindcss/postcss": "^4",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
+    "@types/qrcode": "^1.5.6",
     "@types/react": "19.2.7",
     "@types/react-dom": "19.2.3",
     "eslint": "^9.39.2",
