--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -27,13 +27,16 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "expo": "~54.0.31",
+    "expo-audio": "^1.1.1",
     "expo-constants": "^18.0.13",
+    "expo-image-picker": "~17.0.10",
     "expo-linking": "^8.0.11",
     "expo-localization": "^17.0.8",
     "expo-location": "^19.0.8",
     "expo-router": "^6.0.21",
     "expo-status-bar": "~3.0.9",
     "expo-updates": "~29.0.16",
+    "expo-video": "^3.0.15",
     "i18next": "^25.7.4",
     "intl-pluralrules": "^2.0.1",
     "lucide-react-native": "^0.562.0",
