--- a/turbo.json
+++ b/turbo.json
@@ -16,6 +16,10 @@
       "cache": false,
       "persistent": true
     },
+    "dev:https": {
+      "cache": false,
+      "persistent": true
+    },
     "test": {
       "dependsOn": ["build"],
       "outputs": ["coverage/**"]
