Fix login storage not cleared out on logout

--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint .",
     "type-check": "tsc --noEmit",
     "update:preview": "eas update --branch preview",
+    "update:preview:android": "eas update --branch preview --platform android",
     "update:production": "eas update --branch production"
   },
   "dependencies": {
@@ -26,14 +27,14 @@
     "axios": "^1.13.2",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "expo": "~54.0.31",
+    "expo": "~54.0.32",
     "expo-audio": "^1.1.1",
     "expo-constants": "^18.0.13",
     "expo-image-picker": "~17.0.10",
     "expo-linking": "^8.0.11",
     "expo-localization": "^17.0.8",
     "expo-location": "^19.0.8",
-    "expo-router": "^6.0.21",
+    "expo-router": "^6.0.22",
     "expo-status-bar": "~3.0.9",
     "expo-updates": "~29.0.16",
     "expo-video": "^3.0.15",
