--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -45,6 +45,8 @@
     "react": "19.1.0",
     "react-i18next": "^16.5.1",
     "react-native": "0.81.5",
+    "react-native-image-viewing": "^0.2.2",
+    "react-native-keyboard-controller": "^1.20.6",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "~4.16.0",
