--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -46,6 +46,7 @@
     "i18next-browser-languagedetector": "^8.2.0",
     "ioredis": "^5.8.2",
     "jsonwebtoken": "^9.0.3",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.555.0",
     "next": "16.1.1",
     "next-devtools-mcp": "^0.3.5",
@@ -73,6 +74,7 @@
     "@repo/tsconfig": "*",
     "@tailwindcss/postcss": "^4",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/jszip": "^3.4.0",
     "@types/node": "^20",
     "@types/qrcode": "^1.5.6",
     "@types/react": "19.2.7",
