--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -30,7 +30,9 @@
     "expo": "~54.0.32",
     "expo-audio": "^1.1.1",
     "expo-constants": "^18.0.13",
+    "expo-haptics": "~15.0.8",
     "expo-image-picker": "~17.0.10",
+    "expo-linear-gradient": "~15.0.8",
     "expo-linking": "^8.0.11",
     "expo-localization": "^17.0.8",
     "expo-location": "^19.0.8",
