Set up end to end testing using playwright

--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,11 @@ yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
+# playwright
+test-results/
+playwright-report/
+playwright/.cache/
+
 # env files
 .env*
 
