--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -41,6 +41,7 @@
     "expo-location": "^19.0.8",
     "expo-router": "^6.0.22",
     "expo-status-bar": "~3.0.9",
+    "expo-task-manager": "^14.0.9",
     "expo-updates": "~29.0.16",
     "expo-video": "^3.0.15",
     "i18next": "^25.7.4",
