Fix foreground service permission

--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -5,12 +5,13 @@
   "scripts": {
     "start": "expo start",
     "dev": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "lint": "eslint .",
     "type-check": "tsc --noEmit",
-    "build:preview": "eas build --platform android --profile preview",
-    "build:production": "eas build --platform android --profile production",
+    "build:development": "eas build --profile development --platform android",
+    "build:preview": "eas build --profile preview --platform android",
+    "build:production": "eas build --profile production --platform android",
     "update:preview": "eas update --branch preview",
     "update:preview:android": "eas update --branch preview --platform android",
     "update:production": "eas update --branch production",
@@ -33,6 +34,7 @@
     "expo": "~54.0.32",
     "expo-audio": "^1.1.1",
     "expo-constants": "^18.0.13",
+    "expo-dev-client": "~6.0.20",
     "expo-haptics": "~15.0.8",
     "expo-image-picker": "~17.0.10",
     "expo-linear-gradient": "~15.0.8",
