--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -42,6 +42,7 @@
     "expo-localization": "^17.0.8",
     "expo-location": "^19.0.8",
     "expo-router": "^6.0.22",
+    "expo-secure-store": "~15.0.8",
     "expo-status-bar": "~3.0.9",
     "expo-task-manager": "^14.0.9",
     "expo-updates": "~29.0.16",
