--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -33,6 +33,7 @@
     "date-fns": "^4.1.0",
     "expo": "~54.0.32",
     "expo-audio": "^1.1.1",
+    "expo-blur": "~15.0.8",
     "expo-constants": "^18.0.13",
     "expo-dev-client": "~6.0.20",
     "expo-haptics": "~15.0.8",
@@ -60,6 +61,7 @@
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
+    "react-native-svg-transformer": "^1.5.3",
     "react-native-worklets": "0.5.1",
     "react-native-worklets-core": "^1.6.2",
     "socket.io-client": "^4.8.3",
